<resources>
    <string name="app_name">"Jiayu.es"</string>
    <string name="bienvenida">"Welcome to Jiayu.es application. This application will show the exact model with the nomenclature www.jiayu.es find."</string>
    <string name="title_activity_browser">"Downloads Jiayu.es"</string>
    <string name="title_activity_about">"About us ..."</string>
    <string name="title_activity_romtool">"Tools ROMs"</string>
    <string name="title_activity_inicio">"Initiation"</string>
    <string name="title_activity_video">"Videotutorials"</string>
    <string name="title_activity_romscreen">"Operations ROM"</string>
    <string name="title_activity_recoveryscreen">"Recovery Operations"</string>
    <string name="title_activity_imeiscreen">"IMEI Operations"</string>
    <string name="title_activity_configscreen">"Configuration"</string>
    <string name="title_activity_bootanimation">"Bootanimation"</string>
    <string name="title_activity_backup">"Backup / Restore"</string>
    <string name="title_activity_tools">"Android Tools"</string>
    <string name="updateMnu">"Check for updates"</string>
    <string name="aboutMnu">"About us ..."</string>
    <string name="configMnu">"Configuration"</string>
    <string name="exitMnu">"Leave"</string>
    <string name="seleccionaValue">"Select"</string>
    <string name="msgComprobarVersion">"New version available"</string>
    <string name="msgPreguntaVersion">"Is downloading?"</string>
    <string name="msgCompilacion">"Compilation:"</string>
    <string name="msgModelo">"Model:"</string>
    <string name="msgIdentificado1">"Identified as "</string>
    <string name="msgIdentificado2">" , Although in the ROM information is not indicated as a manufacturer JIAYU"</string>
    <string name="msgTerminalNoJiayu">"Your device is not JIAYU"</string>
    <string name="msgErrorIdentificar">"An error occurred that prevents detect your device model"</string>
    <string name="msgSeleccionado">"Selected"</string>
    <string name="msgIngenieroNoExiste">"The application does not exist"</string>
    <string name="msgErrorUnzip">"Error while decompressed"</string>
    <string name="msgErrorRom">"Error while initializing the installation of the ROM"</string>
    <string name="msgErrorRecovery">"Error while writing the Recovery"</string>
    <string name="msgNoRoot">"You need to be Root"</string>
    <string name="msgRecoveryFlasheado">"Recovery installed, Reset in Recovery?"</string>
    <string name="msgRebootRecoveryQF">"To install the ROM / Wipe / Zip will need to restart the device, you want to reboot now?"</string>
    <string name="msgRebootBackupQF">"To create a copy of the system to restart, you want to reboot now?"</string>
    <string name="msgRebootRestoreQF">"To restore the system back to restart, you want to reboot now?"</string>
    <string name="msgRebootRecoveryQ">"Restart? Recovery?"</string>
    <string name="msgImeiExiste1">"There is already a backup of your "</string>
    <string name="msgImeiExiste2">"And, this operation will overwrite the existing one, you want to continue?"</string>
    <string name="msgImeihecho">"created"</string>
    <string name="msgImeirestored">"restored"</string>
    <string name="msgImeiRestoreQ1">"Want to restore your IMEI with file "</string>
    <string name="msgImeiRestoreQ2">"found?"</string>
    <string name="msgTerminadaDescarga">"Download complete"</string>
    <string name="msgIniciandoDescarga">"Download initiated"</string>
    <string name="msgTapaTalk">"You can also find us on Tapatalk! Jiayu.es"</string>
    <string name="msgLastVersion">"I have the latest version of the application"</string>
    <string name="msgInfoJiayu">"&lt;b&gt; Official Distributor in Spain: &lt;/ b&gt; &lt;br&gt; email: &lt;a href=\"info@jiayu.es\"&gt; info@jiayu.es &lt;/ a&gt; &lt;br&gt; &lt;b&gt; call Hours: &lt;/ b&gt; &lt;br&gt; 9:00 to 14:00 LV &lt;br&gt; &lt;b&gt; Location: &lt;/ b&gt; &lt;br&gt; Jiayu España, Pasaje Angels i Frederic, 2. 46022, Valencia (Spain) Tel &lt;br&gt; 963556091
    "</string>
    <string name="msgGenericError">"Failed"</string>
    <string name="msgSubjectInfo">"Jiayu.es Info"</string>
    <string name="msgActivandoBTWifi">"Activating Bluetooth and WiFi, necessary to identify the device model"</string>
    <string name="msgModeloNoIgualFichero">"The selected file does not appear to contain your device model name, may not be compatible with your device, you want to install it anyway?"</string>
    <string name="msgConfiguracion">"Configuration"</string>
    <string name="msgRebootQ">"To apply the new IMEI to restart, Reboot now?"</string>
    <string name="msgInstallBootC">"Bootanimation changed"</string>
    <string name="msgNoBusybox">"Busybox is not installed, Is downloading?"</string>
    <string name="msgExisteBackup">"A copy already exists with that name, Delete?"</string>
    <string name="msgNoExisteBackup">"No copies found"</string>
    <string name="msgErrorMD5">"File integrity error, invalid file, download erroneous or incomplete"</string>
    <string name="msgNoSD">"No SD / Memory or USB storage is enabled, to use this app you need an SD card"</string>
    <string name="msgMD5Jiayu">Remember that this option will only work with ROM / Recovery downloaded from jiayu.es</string>
    <string name="msgMmd5Updated">Md5 List Updated</string>
    <string name="about1">"Official Distributor in Spain:"</string>
    <string name="about2">"info@jiayu.es"</string>
    <string name="about3">"Call Schedule:"</string>
    <string name="about4">"MF 9:00 to 2:00 p.m."</string>
    <string name="about5">"Location:"</string>
    <string name="about6">"Jiayu España, Pasaje Angels i Federic,2. 46022, Valencia (Spain)"</string>
    <string name="about7">"+34902949169"</string>
    <string name="downloadedFlashZipTxt">"Zips downloaded"</string>
    <string name="downloadedRecoveryTxt">"Recoverys downloaded"</string>
    <string name="downloadedRomTxt">"Downloaded ROMs"</string>
    <string name="downloadedAPKTxt">"APKs downloaded"</string>
    <string name="downloadedBootTxt">"Downloaded bootanimation"</string>
    <string name="descargasBtn">"Downloads"</string>
    <string name="accesoriosBtn">"Accessories"</string>
    <string name="videosBtn">"Videotutorials"</string>
    <string name="tiendaBtn">"              Shop"</string>
    <string name="herramientasBtn">"Drivers-Tools"</string>
    <string name="herramientasROMBtn">"Tools ROMs"</string>
    <string name="flashRecoveryBtn">"Install Recovery"</string>
    <string name="flashZipBtn">"Install Zip"</string>
    <string name="flashRomBtn">"Install ROM"</string>
    <string name="installApkBtn">"Install APK"</string>
    <string name="ingenieroBtn">"Application Engineer Mode"</string>
    <string name="imeiBtn">"Backup / Restore IMEI"</string>
    <string name="imeiBBtn">"Copy IMEI"</string>
    <string name="imeiRBtn">"Restore IMEI"</string>
    <string name="rebootRecoveryBtn">"Reboot in Recovery"</string>
    <string name="cancelarBtn">"Cancel"</string>
    <string name="aceptarBtn">"Accept"</string>
    <string name="fileExplorerBtn">"Open File Explorer"</string>
    <string name="visitarWebBtn">"Visit Web"</string>
    <string name="enviarEmailBtn">"Send email"</string>
    <string name="foroBtn">"        Forum"</string>
    <string name="aboutBtn">"About us ..."</string>
    <string name="cwmChk">"I have installed the CWM Recovery"</string>
    <string name="notificacionChkUpd">"Show Updates implementation"</string>
    <string name="notificacionChkNews">"Show news for your device"</string>
    <string name="ajustaBootChk">"Attempting to rescale bootanimation screen resolution"</string>
    <string name="firmarChk">"Check file integrity"</string>
    <string name="imeiSEBtn">"Send Email IMEI"</string>
    <string name="salirBtn">"Leave"</string>
    <string name="bootanimationBtn">"Change bootanimation"</string>
    <string name="dataCacheDalvikBtn">"Wipe data / cache / dalvik"</string>
    <string name="installBootBtn">"Install bootanimation"</string>
    <string name="bootDescargaBtn">"Download bootanimation"</string>
    <string name="backupBtn">"Backup / Restore System"</string>
    <string name="softkeysBtn">"Show / Hide Softkeys"</string>
    <string name="toolsAndroidBtn">"Android Tools"</string>
    <string name="downloadMD5Btn">"Download MD5 list file"</string>
    <string name="backupRdb">"Back up system"</string>
    <string name="restoreRdb">"Restore backup system"</string>
    <string name="ntfMinTxt">"New to JIAYU.es"</string>
    <string name="ntfTituloTxt">"New to JIAYU.es"</string>
    <string name="ntfDetallesTxt">"New products for your device"</string>
    <string name="ntfNuevaVersionTxt">"Update JIAYU.es"</string>
    <string name="ntfTituloNVTxt">"Update JIAYU.es "</string>
    <string name="ntfDetallesNVTxt">"Version:"</string>
    <string name="bcknameTxt">"Write name of backup"</string>
    <string name="txtbckRdb">"Select"</string>
    <string name="makebackuprestoreBtn">"Run"</string>
    <string name="guardarBtn">"Save"</string>
    <string name="enviarNoExisteBtn">Send model review</string>
    <string name="emailContacto">spainjiayu@gmail.com</string>
    <string name="envioErrores">Jiayu App phone not recognized</string>
    <string name="msgNoMD5File">No MD5 File, Download it from Configuration screen</string>
    <string name="menuflashRomBtn">Install ROM/ZIP</string>
    <string name="msgOptDisabled">Root not available, some options are disabled</string>
    <string name="recoveryChk">Detect recovery (Root required)</string>
    <string name="msgNecesarioReiniDetect">Failed to detect the recovery installed, you must restart in recovery and restart for it to be detected by the application Jiayu.es</string>
    <string name="noInternet">Unable to display the selected screen, no internet connection. Check your connection and try again</string>
    <string name="msgRecoveryDetectado">Recovery Installed:</string>
    <string name="msgRecoveryDetectadoReboot">Detect Recovery is enabled to function properly you need to reboot into recovery now.</string>
    <string name="volverBtn">Go Back</string>
    <string name="msgNuevasOpciones">Added new options available in the configuration screen. Click the Config button for review</string>
    <string name="msgManualReboot">Update.zip file copied to the root of the memory, now you need to reboot into recovery and manually install the update.zip file from the recovery</string>
    <string name="herramientasUsuTxt">Tools</string>
    <string name="copiasSegTxt">Backup Tools</string>
    <string name="herramientasROMTxt">Device Tools</string>
    <string name="msgRamProblem">, but it seems that there is a problem with the RAM amount, that is</string>
    <string name="msgRamProblem2">and should be 1GB or 2GB, please flash the latest ROM with SPFLASHTOOL to solve this problem</string>
    <string name="msgIdentificadoParcial">Identified, not exactly, as</string>
    <string name="msgRomSpFlash">The Rom you are downloading is ONLY flasheable with SPFLASHTOOL, this ROM can´t be installed with this Jiayu APP</string>
    <string-array name="languages">
        <item>"Change Language"</item>
        <item>"English"</item>
        <item>"Español"</item>
        <item>"Catala"</item>
        <item>"Euskera"</item>
        <item>"Français"</item>
        <item>"Italiano"</item>
        <item>"日本语"</item>
        <item>"Portugues"</item>
        <item>"Deutsch"</item>
        <item>"русский"</item>
        <item>"中国 语言"</item>
    </string-array>
    <string-array name="languages_values">
        <item/>
        <item>"en"</item>
        <item>"es"</item>
        <item>"ca"</item>
        <item>"eu"</item>
        <item>"fr"</item>
        <item>"it"</item>
        <item>"ja"</item>
        <item>"pt"</item>
        <item>"de"</item>
        <item>"ru"</item>
        <item>"zh"</item>
    </string-array>
</resources>