<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imeiBtn"
                android:id="@+id/imeiBtn"
                android:layout_gravity="left|center_vertical"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filesBtn"
                android:layout_gravity="left|center_vertical"
                android:text="@string/fileExplorerBtn"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingenieroBtn"
                android:id="@+id/ingenieroBtn"
                android:layout_gravity="left|center_vertical"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flashRomBtn"
                android:id="@+id/romBtn"
                android:layout_gravity="left|center_vertical"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flashRecoveryBtn"
                android:id="@+id/recoveryBtn"
                android:layout_gravity="left|center_vertical"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rebootRecoveryBtn"
                android:id="@+id/rebootRecoveryBtn"
                android:layout_gravity="left|center_vertical"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/downloadedAPKTxt"
                android:id="@+id/apkTexto"
                android:layout_gravity="left|center_vertical"
                android:paddingTop="20dp"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apkSpn"
                android:layout_gravity="left|center_vertical"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/installApkBtn"
                android:id="@+id/apkBtn"
                android:layout_gravity="left|center_vertical"/>
    </LinearLayout>
</ScrollView>