<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal"
    >
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@drawable/fondo02">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/msgGenericError"
            android:id="@+id/textView1"
            android:layout_gravity="left|center_vertical"
            style="@style/LabelTextBlackLeft"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/noInternet"
            android:id="@+id/noInternet"
            android:layout_gravity="left|center_vertical"
            style="@style/LabelTitleBold"
            android:background="@drawable/c00"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volverBtn"
            android:id="@+id/volverBtn"
            android:layout_gravity="left|center_vertical"
            android:onClick="volver"
            android:background="@drawable/btn_secherramientasdev"
            style="@style/LabelTextBlack"/>
    </TableLayout>
</ScrollView>