<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal"
    >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@drawable/fondo02"
        >
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:contentDescription="Jiayu.es"
            android:scaleType="fitCenter"
            android:clickable="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:adjustViewBounds="false"
            android:src="@drawable/jiayulogoic"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/activity_horizontal_marginTop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about1"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="30dp"
        android:id="@+id/scText"
        style="@style/LabelTextBlackLeft"/>
    <!--android:layout_width="297dp"
            android:layout_height="261dp"-->
    <ImageButton
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/imageButton2"
        android:src="@drawable/maps"
        android:layout_width="297dp"
        android:layout_height="261dp"
        android:adjustViewBounds="false"
        android:scaleType="fitXY"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about6"
        style="@style/LabelTextBlack"
        android:background="@drawable/c00"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about7"
        android:autoLink="phone"
        style="@style/LabelTextBlack"
        android:background="@drawable/c00"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:autoLink="email"
        style="@style/LabelTextBlack"
        android:background="@drawable/c00"/>
    </TableLayout>
</ScrollView>